--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -60,15 +60,15 @@ release:
       name_template: '{{ .ProjectName }}_{{ .Version }}_manifest.json'
   ids:
     - none
-signs:
-  - args: ["sign", "--dearmor", "--file", "${artifact}", "--out", "${signature}"]
-    artifacts: checksum
-    cmd: signore
-    signature: ${artifact}.sig
-  - args: ["sign", "--dearmor", "--file", "${artifact}", "--out", "${signature}"]
-    artifacts: checksum
-    cmd: signore
-    id: key-id
-    signature: ${artifact}.72D7468F.sig
+# signs:
+#   - args: ["sign", "--dearmor", "--file", "${artifact}", "--out", "${signature}"]
+#     artifacts: checksum
+#     cmd: signore
+#     signature: ${artifact}.sig
+#   - args: ["sign", "--dearmor", "--file", "${artifact}", "--out", "${signature}"]
+#     artifacts: checksum
+#     cmd: signore
+#     id: key-id
+#     signature: ${artifact}.72D7468F.sig
 snapshot:
   name_template: "{{ .Tag }}-next"
